# HaRe

./: .gitignore  .gitlab-ci.yml  .gitmodules  .hlint.yaml  .travis.yml  HaRe.cabal  cabal.project  configure.sh  configure_tests.sh  dbuild.sh  stack-7.10.3.yaml  stack-8.0.1.yaml  stack-8.0.2.yaml  stack-8.2.1.yaml  stack-8.2.2.yaml  stack-8.4.1.yaml  stack-8.4.2.yaml  stack-8.4.3.yaml  stack-8.4.4.yaml  stack-8.6.1.yaml  stack-8.6.3.yaml  stack-8.6.4.yaml  stack.yaml
.circleci/: config.yml
app/: MainHaRe.hs
test/: AddConSpec.hs  AddRmParamSpec.hs  GenApplicativeSpec.hs  HughesListSpec.hs  LocUtilsSpec.hs  Main.hs  MaybeToMonadPlusSpec.hs  MonadificationSpec.hs  MoveDefSpec.hs  RenamingSpec.hs  TestUtils.hs  TypeUtilsSpec.hs  UtilsSpec.hs
test/testdata/: BCpp.hs  TokenTest.hs  testdata.cabal
test/testdata/AddCon/: A1.expected.hs  A1.hs
test/testdata/AddOneParameter/: A1.expected.hs  A1.hs  A2.expected.hs  A2.hs  A3.expected.hs  A3.hs
test/testdata/Demote/: A1.hs  A2.hs  C2.hs
test/testdata/DupDef/: Dd2.hs  Dd2.hs.expected  Dd2Main.hs  Dd3.hs  Dd3.hs.expected  Dd3Main.hs
test/testdata/GenApplicative/: GA1.hs.expected  GA2.hs  GA2.hs.expected  GaTokenizer.hs  HTMLTokenizer.hs  HTMLTokenizer.hs.expected
test/testdata/HughesList/: DList.hs  DListHughes.hs  FHList1.hs  FHList1.hs.expected  FHList2.hs  FHList2.hs.expected  HList1.hs  HList1.hs.expected  HList1.hs.expected~  HList1.hs~  HList2.hs  HList2.hs.expected  HList3.hs  HList3.hs.expected  HList3.hs.expected2  HList4.hs  HList4.hs.expected  ghci  tst.hs  (+1 more)
test/testdata/cabal/cabal4/: cabal4.cabal
(+68 files in other folders)
